--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -1,3 +1,14 @@
 .icono{
     color: #FFFFFF;
 }
+
+.footer{
+    height: 50px;
+    background: black;
+    color: white;
+  
+    margin-top: 500px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
